2006-01-23  Carl Hetherington  <inkscape@carlh.net>

	* src/selection.cpp: fix a typo in one of my previous commits.
	Closes #1401357.

2006-01-20  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/widgets/toolbox.cpp, src/widgets/desktop-widget.cpp,
	  src/conn-avoid-ref.cpp, src/conn-avoid-ref.h, src/sp-namedview.cpp,
	  src/sp-namedview.h, src/attributes.cpp, src/attributes.h,
	  src/attributes-test.cpp:

	  Added a "Spacing" control to the connector toolbar which allows
	  the user to adjust the amount of space left around avoided shapes
	  for the purpose of determining auto-routing connector paths.

2006-01-17  Marco Scholten  <mscholtn@xs4all.nl>

	* /src/ui/dialog/inkscape-preferences.cpp:
      Added style swatches,
      Changed Gtk::Requisition Gtk::Widget::size_request() to 	
      void Gtk::Widget::size_request(const Requisition& requisition)	
	* /src/ui/dialog/preferences-widget.cpp & .h:
	  Added DialogPage::set_tip()

2006-01-17  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* packaging/osx-app.sh, packaging/macosx/Resources/etc/fonts/fonts.conf:
	  Use a modified fonts.conf file for Mac OS X that includes the 
	  standard user font directory ~/Library/Fonts.

2006-01-16  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/svg/Makefile_insert: Updated to reflect a previous header
	  file renaming.

2006-01-12  Marco Scholten  <mscholtn@xs4all.nl>

	* /src/ui/dialog/inkscape-preferences.cpp & .h:
	  Converted preferences dialog to gtkmm
	* src/ui/widget/preferences-widget.cpp & .h:
	  New files.
	* src/verbs.cpp: updated to start new dialog.

2006-01-11  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/sp-item-group.cpp, src/sp-path.cpp, src/sp-star.cpp,
	  src/extension/internal/svg.cpp, src/ui/widget/ruler.cpp:
	  Fix some compilation problems on Mac OS X after recent
	  includes cleanup.

2006-01-05  Jon A. Cruz  <jon@joncruz.org>

	* src/widgets/desktop-widget.cpp:
	  Corrected resize behavior of canvas/swatches split.
